--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhos
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }    
 </style>
-<iframe src="./indexx.html" width="100%" style="height: 100vh"></iframe>
+<iframe src="https://podcast.b0x.top" width="100%" style="height: 100vh"></iframe>
  
  
 </body></html>
