--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vote For Me</title>
     <meta name="robots" content="noindex">
+      
+      <link rel="icon" type="image/jpeg" href="/user/uploads/image.jpg">
+
+<meta property="og:image" content="/user/uploads/image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
  
 </head>
 <body>
