--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Vote For Me</title>
     <meta name="robots" content="noindex">
       
-      <link rel="icon" type="image/jpeg" href="/user/uploads/image.jpg">
+      <link rel="icon" type="image/jpeg" href="https://podcast.b0x.top/user/uploads/image.jpg">
 
-<meta property="og:image" content="/user/uploads/image.jpg">
+<meta property="og:image" content="https://podcast.b0x.top/user/uploads/image.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
  
